@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Issue #1881: An internal parser limit has been increased. Also see 
+  issue 215555 for a discussion.
+
 - Added the future_builtins module, which contains hex() and oct().
   These are the PEP 3127 version of these functions, designed to be
   compatible with the hex() and oct() builtins from Python 3.0.  They
